# chromancy

./: .gitignore  AGENT.md  AGENTS.md  AGENT_TASKS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INTEGRATION_CONTRACTS.md  README.md  TASKS.md  config.toml  docker-compose.lgtm.yml  wled-config.toml.example
.devcontainer/: Dockerfile  devcontainer.json
.pi/extensions/: git-workflow.ts
.pi/skills/e2e-mcp-testing/: SKILL.md
.pi/skills/e2e-mcp-testing/scripts/: run-device-check.sh  run-smoke-test.sh  validate-config.sh
.pi/skills/github-pr/: SKILL.md
.pi/skills/github-pr/scripts/: pr-check.sh
docs/decisions/: 001-mcp-server-architecture.md
grafana/dashboards/: chromancy-otel.json
grafana/provisioning/dashboards/: chromancy.yaml
src/: client.rs  config.rs  error.rs  fleet.rs  lib.rs  main.rs  sync_group.rs  telemetry.rs  tools.rs  types.rs  wled_client.rs
src/wled_client/: error.ts  examples.rs  mutation_operations.rs  query_operations.rs  types.rs
tests/e2e/: README.md  mcp-device-health-check.mjs  mcp-readonly-smoke-test.mjs
