[package]
name = "chromancy"
version = "0.1.0"
edition = "2021"

[lib]
name = "chromancy"
path = "src/lib.rs"

[[bin]]
name = "chromancy"
path = "src/main.rs"

[dependencies]
indexmap = "2"
opentelemetry = "0.27"
opentelemetry-appender-tracing = "0.27"
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
reqwest = { version = "0.12", features = ["json"] }
rmcp = { version = "0.1", features = ["server", "macros", "transport-io"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
